external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_struct_match.move
module 0x42::m {

    public struct Box<T> { x: T }

    fun test(opt: &Box<u8>) {
        match (opt) {
            Box { x: T } => (),
        }
    }

}
